                                     Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
 - 25-06-2005 fixed: MACDll.dll had paths limited to 259 characters.
 - 25-06-2005 fixed: 6 ch AAC playback with PAPlayer would crash/play slowly.
 - 25-06-2005 added: hidden setting to alter the background colour during video playback (see settings.xml, tag is <BlackBarColour> - this specifies the greyscale value used.)
 - 24-06-2005 fixed: Small width anim-gif loading crash.
 - 24-06-2005 fixed: wav header parsing in wavcodec is incorrect
 - 24-06-2005 fixed: Small issue in FileHD (reading of weather .rar file triggered it)
 - 24-06-2005 fixed: Transistion on press of left/right in my pictures faded incorrectly.
 - 24-06-2005 changed: aaccodec now uses mp4ff to read m4a files (aaccodec.dll in system\players\paplayer got updated)
 - 24-06-2005 updated: Norwegian language file (Thnx to vnm)
 - 24-06-2005 updated: German language file
 - 24-06-2005 changed: dll's loaded via section loader are unloaded with a 30 secs delay when unreferenced -> more freemem when using my music
 - 22-06-2005 fixed: some nav sounds are not played correctly
 - 22-06-2005 added: New MasterLock option: Settings & Filemanager & Home Media [GeminiServer]
                     Now you can define a MasterLock also for Settings, Filemanager, My Video, My Music, My Pictures, My Programms
                     Location: Settings - Appearance - Master Lock: Lock Filemanger, Lock Settings and Lock Media!
                     These settings are also setable via xboxmediacenter.xml: <LockFilemanager>0</LockFilemanager>, <LockSettings>0</LockSettings>, <LockHomeMedia>0</LockHomeMedia>